--- a/frescozoomablelib/build.gradle
+++ b/frescozoomablelib/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -29,5 +29,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.facebook.fresco:fresco:1.0.0'
+    compile 'com.facebook.fresco:animated-gif:1.0.0'
     testCompile 'junit:junit:4.12'
 }
