--- a/frescozoomablelib/build.gradle
+++ b/frescozoomablelib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 25
@@ -31,4 +32,13 @@ dependencies {
     compile 'com.facebook.fresco:fresco:1.3.0'
     compile 'com.facebook.fresco:animated-gif:1.3.0'
     testCompile 'junit:junit:4.12'
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        repository(url: "file://" + file("maven"))
+        pom.groupId = "com.worktile"
+        pom.artifactId = 'zoomabledrawee'
+        pom.version = '1.0.2'
+    }
 }
