--- a/zoomabledrawee/build.gradle
+++ b/zoomabledrawee/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
 
 android {
     compileSdkVersion 25
@@ -23,27 +22,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.ibosong.CommentGallery:frescozoomablelib:1.0.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-
-    configurations.all {
-        resolutionStrategy {
-            force 'com.facebook.fresco:fresco:1.3.0', 'com.facebook.fresco:animated-gif:1.3.0'
-        }
-    }
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        repository(url: "file://" + file("maven"))
-        pom.groupId = "com.worktile"
-        pom.artifactId = 'largeimagegallery'
-        pom.version = '1.0.5'
-    }
 }
