--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://raw.githubusercontent.com/Fearimdly/CommentGallery/master/frescozoomablelib/maven' }
     }
 }
 
